tests/sksl/errors/EmptyArray.glsl
### Compilation failed:

error: 1: array size must be positive
1 error
